Fix: Delete Screen button alignment

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -29,3 +29,7 @@ body {
 .css-1q6at85-MuiInputBase-root-MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
     border-color: black !important;
 }
+
+input:focus, input:active, input:visited {
+    border-color: black !important;
+}
