--- a/src/index.css
+++ b/src/index.css
@@ -111,3 +111,7 @@ body {
 .css-1eed5fa-MuiInputBase-root-MuiInput-root::after {
     border-bottom: 2px solid #000 !important;
 }
+
+.MuiInputBase-input {
+    
+}
